--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <style>
 
     :root{
-      --bg: #0f1724;
-      --card: #0b1220;
-      --accent: #7dd3fc;
-      --muted: #9aa4b2;
+      --bg: #1a1a1a;
+      --card: #232323; 
+      --accent: #e0e0e0; 
+      --muted: #b0b0b0; 
       --glass: rgba(255,255,255,0.03);
     }
     html,body{
