Update product image and details in index.html

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
     <main class="container">
       <article class="card">
         <div class="card-inner">
-          <img class="thumb" src="https://images.unsplash.com/photo-1602524818228-5ad9a2b5b6a8?q=80&w=1600&auto=format&fit=crop" alt="Exempelprodukt">
+          <img class="thumb" src="https://cdn.inet.se/product/688x386/2226915_6.png" alt="Dell 34" Alienware AW3425DW OLED WQHD (1800R) 240 Hz">
           <div class="content">
-            <h3 class="title">Exempelprodukt 1</h3>
-            <div class="meta">Prisidé, önskad mängd eller annan info.</div>
+            <h3 class="title">Dell 34" Alienware AW3425DW OLED WQHD (1800R) 240 Hz</h3>
+            <div class="meta">Skärm för jobb.</div>
             <div class="actions">
               <a class="btn" href="https://www.inet.se/produkt/2226915/dell-34-alienware-aw3425dw-oled-wqhd-1800r-240-hz" target="_blank" rel="noopener">Se produkt</a>
             </div>
